--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "protect-image-service",
+  "name": "image-service",
   "version": "0.1.0",
   "bin": {
-    "protect-image-service": "bin/protect-image-service.js"
+    "image-service": "bin/image-service.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "cdk deploy"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/node": "20.4.10",
+    "aws-cdk": "2.92.0",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.92.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.6"
   },
   "dependencies": {
     "aws-cdk-lib": "2.92.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.3.1",
     "source-map-support": "^0.5.21"
   }
 }
