--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "jest",
     "cdk": "cdk",
     "deploy": "cdk deploy",
-    "deploy:prod": "cdk deploy ImageService",
-    "deploy:staging": "cdk deploy ImageService_Staging"
+    "deploy:prod": "cdk deploy ImageServiceStack",
+    "deploy:staging": "cdk deploy ImageServiceStackStaging"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
@@ -27,5 +27,8 @@
     "constructs": "^10.0.0",
     "dotenv": "^16.3.1",
     "source-map-support": "^0.5.21"
-  }
+  },
+  "workspaces":[
+    "lambdas/trigger"
+  ]
 }
