--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
     "typescript": "~5.1.6"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.445.0",
     "aws-cdk-lib": "2.92.0",
     "constructs": "^10.0.0",
     "dotenv": "^16.3.1",
     "source-map-support": "^0.5.21"
-  },
-  "workspaces":[
-    "lambdas/trigger"
-  ]
+  }
 }
