--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "^29.6.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.441.0",
     "aws-cdk-lib": "2.92.0",
     "constructs": "^10.0.0"
   }
