--- a/package.json
+++ b/package.json
@@ -5,17 +5,28 @@
     "image-service": "bin/image-service.js"
   },
   "scripts": {
-    "build": "echo \"The build step is not required when using JavaScript!\" && exit 0",
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
     "cdk": "cdk",
-    "test": "jest"
+    "deploy": "cdk deploy",
+    "deploy:prod": "cdk deploy ImageServiceStack",
+    "deploy:staging": "cdk deploy ImageServiceStackStaging"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
+    "@types/node": "20.4.10",
     "aws-cdk": "2.92.0",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "~5.1.6"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.441.0",
+    "@aws-sdk/client-s3": "^3.445.0",
     "aws-cdk-lib": "2.92.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "dotenv": "^16.3.1",
+    "source-map-support": "^0.5.21"
   }
 }
