Update deploy actions

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 TREE_API_URL=
+# Optional, TREE_API_URL will be used if not set
+TREE_API_URL_STAGING=
+# Name of the bucket where the files will be uploaded in production
 BUCKET_NAME=
+# Name of the bucket where the files will be uploaded in staging
 BUCKET_NAME_STAGING=
+# Email That gets notified when there is an error
 ERRORS_EMAIL=
+# AWS account ID
 ACCOUNT_ID=
+# AWS to deploy in
 AWS_REGION=
