--- a/.github/workflows/deploy-ffc.yaml
+++ b/.github/workflows/deploy-ffc.yaml
@@ -9,7 +9,10 @@ paths:
 env:
   AWS_REGION: eu-west-1
   CDK_DEFAULT_REGION: eu-west-1
-  ACCOUNT_ID: 353704616310
+  ACCOUNT_ID: 471458021033
+  BUCKET_NAME: ffc-prod-photos-83640
+  BUCKET_NAME_STAGING: ffc-stag-photos-83641
+
 
 jobs:
   deploy:
@@ -37,14 +40,12 @@ jobs:
       - name: Deploy to Staging
         run: npm run deploy:staging
         env:
-          BUCKET_NAME: ffc-stag-photos-83641
           TREE_API_URL: https://api-staging.thefutureforestcompany.com
 
       - name: Deploy to Prod if main
       if: github.ref == 'refs/heads/main'
       run: npm run deploy
       env:
-          BUCKET_NAME: ffc-prod-photos-83640
           TREE_API_URL: https://api.thefutureforestcompany.com
 
       - name: Archive cdk output
