Use bearer token for the API request

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ ERRORS_EMAIL=
 ACCOUNT_ID=
 # AWS to deploy in
 AWS_REGION=
+# API token for prod
+TREE_API_TOKEN=
+# API token for staging
+TREE_API_TOKEN_STAGING=
